내가 한번 이렇게 바꾸어 보았따.
어떠니???

--- a/@fileList.html
+++ b/@fileList.html
@@ -9,6 +9,7 @@
 	<li><a href="listenRecent?decorator=samsungTV" target="_blank">최근 들은 곡</a></li>
 	<li><a href="listenCount?decorator=samsungTV" target="_blank">가장 많이 들은 곡</a></li>
 </ul>
+여기는 이코드로 사용하면 더 좋지 ?
 
 <p>- 레프트 메뉴 바로가기 선택 시 레프트 상세 메뉴 열림, 벅스 로고 선택 시 상세 메뉴 닫힘</p>
 <p>- "전체 선택" 버튼 선택 시 곡 선택</p>
