--- a/@fileList.html
+++ b/@fileList.html
@@ -48,3 +48,5 @@
 	<li><a href="http://10.77.165.57:8080/html/stopSamsungTV.html" target="_blank">정기점검</a></li>
 	<li><a href="dialog/dialogCommon?decorator=samsungTV" target="_blank">공통 다이얼로그</a></li>
 </ul>
+
+<p>어렵다아....</p>
